--- a/app/pages/base.html
+++ b/app/pages/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="public/style/style.css" type="text/css">
     <title>Home</title>
 </head>
 <body>
