add block title

--- a/app/pages/base.html
+++ b/app/pages/base.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="public/style/style.css" type="text/css">
-    <title>Home</title>
+    <title>{block name=title}{/block}</title>
   </head>
 
   <body>
+    
     {include file='header.tpl'}
-
 
     <div class="content">
       {block name=content}{/block}
