Eclatement du css et ajout du css impression

--- a/app/pages/base.html
+++ b/app/pages/base.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="public/style/style.css" type="text/css">
+    <link rel="stylesheet" href="public/style/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="public/style/impression.css" type="text/css" media="print">
     <title>{block name=title}{/block}</title>
   </head>
 
