--- a/app/pages/base.html
+++ b/app/pages/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="public/style/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="public/style/impression.css" type="text/css" media="print">
+    <script src="public/js/login.js"></script>
     <title>{block name=title}{/block}</title>
   </head>
 
@@ -14,8 +15,6 @@
     <div class="content">
       {block name=content}{/block}
     </div>
-
-    {include file='footer.tpl'}
 
   </body>
 </html>
